[gd_scene load_steps=2 format=3 uid="uid://b1kvsvm7qci2b"]

[ext_resource type="Script" path="res://screens/launch_screen/launch_screen.gd" id="1_5fri7"]

[node name="LaunchScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fri7")

[node name="LaunchMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -120.5
offset_right = 55.0
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="DesignGame" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Design Game"

[node name="HostGame" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 32
text = "Host Game"

[node name="JoinGame" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 32
text = "Join Game"

[node name="EditDeck" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 32
text = "Deck Editor"

[node name="Settings" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="UserProfile" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 32
text = "User Profile"

[node name="Quit" type="Button" parent="LaunchMenu"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="LaunchMenu/DesignGame" to="." method="_on_design_game_pressed"]
[connection signal="pressed" from="LaunchMenu/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="LaunchMenu/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="LaunchMenu/EditDeck" to="." method="_on_edit_deck_pressed"]
[connection signal="pressed" from="LaunchMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="LaunchMenu/UserProfile" to="." method="_on_user_profile_pressed"]
[connection signal="pressed" from="LaunchMenu/Quit" to="." method="_on_quit_pressed"]
