extends Control

func _on_design_game_pressed():
	pass # Replace with function body.

func _on_host_game_pressed():
	pass # Replace with function body.

func _on_join_game_pressed():
	pass # Replace with function body.

func _on_edit_deck_pressed():
	pass # Replace with function body.

func _on_settings_pressed():
	pass # Replace with function body.

func _on_user_profile_pressed():
	pass # Replace with function body.

func _on_quit_pressed():
	pass # Replace with function body.
